--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     ports:
       - "8001:5000"
     environment:
-      FLASK_APP: main.py
+      FLASK_APP: runner.py
       FLASK_DEBUG: 'True'
 
       DB_USER: ${DB_USER}
