--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '2'
 services:
   files_store:
     build: .
-    image: fs
+    image: project
     ports:
       - "8001:5000"
     environment:
@@ -18,7 +18,7 @@ services:
     links:
       - postgres
     volumes:
-      - ./files_store:/files_store
+      - ./project:/project
 #    tty: true
 
   postgres:
